# RAG-ZhiDaFangZhou

./: .gitignore  智答方舟-README.md
data-agent/: main.py  pyproject.toml
data-agent/app/agent/: context.py  graph.py  llm.py  state.py
data-agent/app/agent/nodes/: add_extra_context.py  correct_sql.py  execute_sql.py  extract_keywords.py  filter_metric.py  filter_table.py  generate_sql.py  merge_retrieved_info.py  recall_column.py  recall_metric.py  recall_value.py  validate_sql.py
data-agent/app/api/: dependencies.py
data-agent/app/api/routers/: query_router.py
data-agent/app/api/schemas/: query_schema.py
data-agent/app/clients/: embedding_client_manager.py  es_client_manager.py  mysql_client_manager.py  qdrant_client_manager.py  simple_search_engine.py
data-agent/app/conf/: app_config.py  config_loader.py  meta_config.py
data-agent/app/core/: context.py  lifespan.py  log.py
data-agent/app/entities/: column_info.py  column_metric.py  metric_info.py  table_info.py  value_info.py
data-agent/app/models/: column_info_mysql.py  column_metric_mysql.py  metric_info_mysql.py  table_info_mysql.py
data-agent/app/prompt/: prompt_loader.py
data-agent/app/repositories/es/: value_es_repository.py
data-agent/app/repositories/mysql/dw/: dw_mysql_repository.py
data-agent/app/repositories/qdrant/: column_qdrant_repository.py  metric_qdrant_repository.py
data-agent/app/scripts/: build_meta_knowledge.py  create_dw_data.py
data-agent/app/services/: meta_knowledge_service.py  query_service.py
data-agent/conf/: app_config.yaml  meta_config.yaml
(+10 files in other folders)
